[gd_scene load_steps=6 format=3 uid="uid://cikoitjwng02w"]

[ext_resource type="Script" path="res://src/UI.gd" id="1"]
[ext_resource type="PackedScene" path="res://src/Screen.tscn" id="2"]
[ext_resource type="PackedScene" path="res://src/GoToAddress.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/StatusLogger.tscn" id="4"]
[ext_resource type="FontFile" path="res://assets/NotoSansMonoRegular.tres" id="5"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MenuPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2

[node name="FileButton" type="MenuButton" parent="MenuPanel/HBoxContainer"]
layout_mode = 2
text = "File"
switch_on_hover = true

[node name="EmulatorButton" type="MenuButton" parent="MenuPanel/HBoxContainer"]
layout_mode = 2
text = "Emulator"
switch_on_hover = true

[node name="HelpButton" type="MenuButton" parent="MenuPanel/HBoxContainer"]
layout_mode = 2
text = "Help"
switch_on_hover = true

[node name="FileDialog" type="FileDialog" parent="."]
show_hidden_files = true

[node name="GoToAddressDialog" parent="." instance=ExtResource("3")]

[node name="MainPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Screen" parent="MainPanel" instance=ExtResource("2")]
scale = Vector2(8, 8)
centered = false

[node name="TextEdit" type="TextEdit" parent="MainPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_bottom = -272.0
focus_mode = 1
theme_override_fonts/font = ExtResource("5")
highlight_current_line = true

[node name="RegisterInfo" type="Label" parent="MainPanel"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -271.0
offset_bottom = -257.0
size_flags_horizontal = 3
text = "A: $00    X: $00    Y: $00    PC: $0000    SP: $0000"

[node name="TabContainer" type="TabContainer" parent="MainPanel"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -255.0

[node name="Status" parent="MainPanel/TabContainer" instance=ExtResource("4")]
layout_mode = 2
text = "Load an assembly file to get started
"

[node name="Hexdump" type="TextEdit" parent="MainPanel/TabContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("5")

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="GoToAddressDialog" to="." method="_on_GoToAddressDialog_confirmed"]
